<resources>
    <string name="app_name">pwa3.0</string>
    <string name="home">Home</string>
    <string name="create_event">Create Event</string>
    <string name="show_orders">Show Orders</string>
    <string name="title_begin_screen">Event Manager</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create An Account</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="show_users">Show users</string>
    <string name="create">Create</string>
    <string name="back">Back</string>

    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="postal">Postal</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="street">Street</string>
    <string name="county">County</string>
    <string name="tickets">Tickets</string>
    <string name="artist">Artist</string>
    <string name="special_guest">Special Guest</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="role">Role</string>

    <string name="users">Users</string>

    <string name="motto">Motto</string>
    <string name="facebook_link">Facebook link</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="eventid">EventID</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="entries">Entries</string>
    <string name="persons_allowed">Persons allowed</string>
    <string name="hour_limitation">Hour limitation</string>
    <string name="events">Events</string>
    <string name="add_nevent">Add Event</string>
    <string name="add_artists">Add Artists</string>
    <string name="add_nspecial_guest">Add Special Guest</string>
    <string name="add_tickets">add Tickets</string>
    <string name="info">Info</string>
    <string name="about_the_party">About the Party</string>
    <string name="orders">Orders</string>
    <string name="orderid">OrderId</string>
    <string name="ticketid1">ticketId1</string>
    <string name="ticketid1quantity">ticketId1Quantity</string>
    <string name="ticketid2">ticketid2</string>
    <string name="ticketid2quantity">ticketid2quantity</string>
    <string name="ticketid3">ticketid3</string>
    <string name="ticketid3quantity">ticketid3quantity</string>
    <string name="total_order">Total Order</string>
    <string name="createdat">createdAt</string>
    <string name="event_id">event_id</string>
    <string name="delete">Delete</string>
    <string name="artist_id">Artist ID</string>
    <string name="update_artist">Update Artist</string>
    <string name="hello">Hello</string>
    <string name="update_artists">UPDATE ARTIST</string>
    <string name="update_special_guest">UPDATE SPECIAL GUEST</string>
    <string name="update_tickets">UPDATE TICKETS</string>
    <string name="update_discription">UPDATE DISCRIPTION</string>
    <string name="guest_id">Guest ID</string>
    <string name="update_guest">UPDATE GUEST</string>
    <string name="create_ticket">CREATE TICKET</string>
    <string name="edit">EDIT</string>
    <string name="show_events">Show_events</string>
    <string name="details">Details</string>
    <string name="show_artists">Show ARTISTS</string>
    <string name="show_guests">SHOW GUESTS</string>
    <string name="show_tickets">SHOW TICKETS</string>
    <string name="show_testimonials">SHOW TESTIMONIALS</string>
    <string name="show_invintations">SHOW INVINTATIONS</string>
    <string name="show__events">SHOW EVENTS</string>
    <string name="show_details">SHOW DETAILS</string>
    <string name="guests">Guests</string>
    <string name="ticket_id">TICKET ID</string>
    <string name="invintations">Invintations</string>
    <string name="invintation_id">INVINTATION ID</string>
    <string name="user_id">USER ID</string>
    <string name="guest_number">Guest Number</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest_email">Guest Email</string>
    <string name="guest_message">Guest Message</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="message">Message</string>
    <string name="testimonial_id">Testimonial Id</string>
    <string name="testimonial">Testimonial</string>
    <string name="update_ticket">UPDATE TICKET</string>
    <string name="update_event">UPDATE EVENT</string>
    <string name="update_description">UPDATE DESCRIPTION</string>


</resources>
