<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="367dp"

            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewOrderId"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/orderid"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/first_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrderId" />

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="131dp"
                android:layout_height="32dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="56dp"
                android:text="@string/last_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTicket_id_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/ticketid1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

            <TextView
                android:id="@+id/textViewTicket_id_1_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="128dp"
                android:text="@string/ticketid1quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/textViewTicket_id_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTicket_id_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/ticketid2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTicket_id_1" />

            <TextView
                android:id="@+id/textViewTicket_id_2_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:text="@string/ticketid2quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/textViewTicket_id_2"
                app:layout_constraintTop_toBottomOf="@+id/textViewTicket_id_1_quantity" />

            <TextView
                android:id="@+id/textViewTicket_id_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/ticketid3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTicket_id_2" />

            <TextView
                android:id="@+id/textViewTicket_id_3_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:text="@string/ticketid3quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/textViewTicket_id_3"
                app:layout_constraintTop_toBottomOf="@+id/textViewTicket_id_2_quantity" />

            <TextView
                android:id="@+id/textViewTotalOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="35dp"
                android:text="@string/total_order"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTicket_id_3" />

            <TextView
                android:id="@+id/textViewCreated_at"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="27dp"
                android:text="@string/createdat"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTotalOrder" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>

