<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:tag="@string/event_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"

            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewEventId"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/event_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewEventTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:id="@+id/textViewInfo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewCreated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/createdat"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />



        </LinearLayout>

    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>

